src/app/password-dialog/password-dialog.component.scss
@import "../../styles.scss";

.dialog {
  @extend .paragraph-gap-2;

  align-items: center;
  padding: 2rem;

  .close {
    position: absolute;
    right: 0;
    top: 0;
    padding: 0.5rem;
    cursor: pointer;
  }

  .content {
    @extend .paragraph-gap-1;

    align-items: center;
    text-align: center;

    .title {
      font-size: 1.25rem;
      font-weight: 600;
      line-height: 100%;
      color: var(--sub-title-color);
    }

    .sub-title {
      font-size: 0.875rem;
      font-weight: 400;
      color: var(--gray-color);
    }
  }

  .form {
    @extend .paragraph-gap-2;

    .password {
      height: 1.75rem;
      padding-left: 0.5rem;
      border: 1px var(--title-gradient-end) solid;
      border-radius: 0.5rem;

      &.invalid {
        border-color: red;
      }

      &:focus-visible {
        outline: none;
      }
    }

    .submit {
      background-color: var(--card-background);
      border: 1px solid var(--border-color-first);
      border-radius: 0.5rem;
      padding: 0.3125rem;
      width: 11.375rem;
      font-family: Inter;
      color: var(--text-color);
      font-size: 1rem;
      font-weight: 500;
      cursor: pointer;

      &.disable {
        cursor: default;
        color: var(--gray-color);

        &:hover {
          box-shadow: none;
        }
      }

      &:hover {
        box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08);
      }
    }
  }
}

